--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//se agrego la dependencia de buildscript para poder abrir el archivo json de firebase
+buildscript {
+    repositories {
+
+        google()  // Google's Maven repository
+
+        mavenCentral()  // Maven Central repository
+
+    }
+    dependencies {
+
+        classpath 'com.google.gms:google-services:4.3.15'
+
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
