--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.logueojdc">
 
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/libros"
-        android:label="@string/app_name"
+        android:label="BibliotecaJDC1"
         android:supportsRtl="true"
         android:theme="@style/Theme.LogueoJDC"
         tools:targetApi="31">
+        <activity
+            android:name=".Libros"
+            android:exported="false" />
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
         <activity
             android:name=".ResetPass"
             android:exported="false" />
@@ -26,7 +36,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="BibliotecaJDC1"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
