--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:hardwareAccelerated="true"
         android:icon="@drawable/libros"
-        android:label="BibliotecaJDC1"
+        android:label="BibliotecaJDC"
         android:supportsRtl="true"
         android:theme="@style/Theme.LogueoJDC"
         tools:targetApi="31">
@@ -36,7 +36,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="BibliotecaJDC1"
+            android:label="BibliotecaJDC"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
